# test

./: README.md  setup.cfg
GUI/: GUI_Accesing_Common_API.py  GUI_Accesing_Fast_API.py  GUI_Analysis.py  GUI_Annotation.py  GUI_Config.py  GUI_Function.py  GUI_dummy_plot.py  GUI_plot.py
examples/: GUI_main_program.py  GUI_main_program_2.py  GUI_main_program_3.py  Main_program_config.txt  Resource_Foto.qrc  Rumpiang_Gundala_GUI_V4.ui  test.py  test_multiple.py
