[metadata]
name = RMCS-GUI
version = 0.0.0
author = Chandra Wijaya Sentosa
author_email = chandra.w.sentosa@gmail.com
description = Python package for presenting RMCS data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/chandrawi/RMCS-GUI
project_urls =
    Bug Tracker = https://gitlab.com/chandrawi/RMCS-GUI/issues
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = 
    GUI
python_requires = >=2.7
install_requires =
    requests
